cleaned up code and seperated components

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,16 +17,8 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Login, .Signup {
+.Login,
+.Signup {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,13 +26,15 @@
   margin: 20px;
 }
 
-.Login input, .Signup input {
+.Login input,
+.Signup input {
   margin: 10px;
   padding: 10px;
   width: 200px;
 }
 
-.Login button, .Signup button {
+.Login button,
+.Signup button {
   margin: 10px;
   padding: 10px;
   width: 220px;
@@ -61,6 +44,7 @@
   cursor: pointer;
 }
 
-.Login button:hover, .Signup button:hover {
+.Login button:hover,
+.Signup button:hover {
   background-color: #21a1f1;
 }
