--- a/src/components/styles/AddQA_Screen.css
+++ b/src/components/styles/AddQA_Screen.css
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  & > form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+  }
 }
