--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -10,6 +10,12 @@
   padding: 10px;
   color: #333;
 
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   button {
     margin: 5px;
     padding: 5px 10px;
