--- a/src/components/styles/AddQA_Screen.css
+++ b/src/components/styles/AddQA_Screen.css
@@ -2,10 +2,64 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  & > form {
+
+  .header {
+    display: flex;
+    align-items: center;
+    padding: 1rem 2rem;
+    margin: 1rem 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: #f2f2f2;
+
+    > * {
+      margin: 0 0.5rem;
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      background-color: #fff;
+      border: none;
+      border-radius: 5px;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
+  }
+
+  .form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+
+    > * {
+      margin: 0.2rem 0;
+    }
+
+    button {
+      margin: 1rem;
+      padding: 1rem 2rem;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #0056b3;
+        transform: scale(1.04);
+        transition: transform 0.3s ease-in-out;
+      }
+    }
+  }
+
+  .fileQA {
+    input[type='file']::-webkit-file-upload-button {
+      border: 1px solid black;
+      border-radius: 5px;
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+    }
   }
 }
