--- a/src/components/styles/Dashboard.css
+++ b/src/components/styles/Dashboard.css
@@ -7,12 +7,9 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #333;
 
-  #addBtn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    margin: 5px;
+  button {
     padding: 5px 10px;
+    margin: 5px;
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -23,5 +20,17 @@
       transform: scale(1.1);
       transition: transform 0.3s ease-in-out;
     }
+  }
+
+  #addBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  }
+
+  #reviewBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 60px;
   }
 }
